--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,40 @@
 body{
   margin: 0;
   padding: 0;
-  display: grid;
-  justify-content: center;
-  align-items: center;
-  grid-gap: 25px;
   font-family: 'Barlow Semi Condensed', sans-serif;
   font-size: 13px;
   box-sizing: border-box;
   background-color: hsl(210, 46%, 95%);
 }
 
+.grid-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .grid-box{
+  margin-bottom: 25px;
   width: 325px;
   height: auto;
   border-radius: 10px;
+  box-shadow: 0 10px 50px -10px hsl(212, 23%, 69%);
+}
+
+.grid-box > p{
+  margin-left: 35px;
+}
+
+.one, .two, .four{
+  color:#FFF;
 }
 
 .one{
+  margin-top: 75px;
   background-color: hsl(263, 55%, 52%);
   background-image: url("images/bg-pattern-quotation.svg");
-  background-position: 200px 15px;
+  background-position: 200px 0;
   background-repeat: no-repeat;
 }
 
@@ -36,28 +50,46 @@ body{
   background-color: hsl(219, 29%, 14%);
 }
 
-.five{
-
-}
 
 .profile-picture{
+  margin-top: 25px;
+  margin-left: 35px;
+  width: 35px;
+  height: auto;
   border-radius: 100%;
 }
 
-.name{
+.personal-info{
+  position: relative;
+  display: inline-block;
+  top: -1px;
+  left: 10px;
+}
 
+.name{
+  margin-bottom: 2.5px;
+  font-size: 1rem;
 }
 
 .verified{
+  margin-bottom: 0;
+  opacity: 50%;
+}
 
+.name, .verified{
+  margin-top: 0;
 }
 
 .headline{
-
+  margin-right: 28px;
+  font-size: 1.25rem;
+  font-weight: 600;
 }
 
 .testimonial{
-
+  margin-right: 25px;
+  margin-bottom: 35px;
+  opacity: 70%;
 }
 
 .attribution {
@@ -68,4 +100,73 @@ body{
 
 .attribution a {
   color: hsl(228, 45%, 44%);
+}
+
+@media only screen and (min-width: 768px){
+  .grid-container{
+    margin: auto;
+    max-width: 700px;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    align-items: stretch;
+    grid-gap: 25px;
+  }
+
+  .grid-box{
+    margin-bottom: 0;
+    width: auto;
+  }
+
+  .one{
+    grid-column: 1 / 5;
+    background-position: 500px 0;
+  }
+
+  .two, .three{
+    grid-column: 1/3;
+  }
+
+  .four{
+    grid-column: 1/5;
+  }
+
+
+  .five{
+    grid-area: 2 / 3 / span 2/ 5
+  }
+}
+
+
+/* --------------FIX THIS!!---------------- */
+@media only screen and (min-width: 1024px){
+  .grid-container{
+    max-width: none;
+    grid-template-columns: auto auto auto auto;
+    grid-template-rows: 500px 500px;
+    align-items: center;
+  }
+
+  .one{
+    width: 530px;
+    grid-column: 1 / 3;
+  }
+
+  .two{
+    grid-column: 3 / 4;
+  }
+
+  .three{
+    grid-column: 1/ 2;
+  }
+
+  .four{
+    width: 530px;
+    grid-column: 2 / 4;
+  }
+
+  .five{
+
+    grid-area: 1 / 4 / span 2 / 5;
+  }
+
 }
