--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ body{
 }
 
 .grid-container{
+  margin: 75px auto auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -23,7 +24,7 @@ body{
 }
 
 .grid-box > p{
-  margin-left: 35px;
+  margin-left: 40px;
 }
 
 .one, .two, .four{
@@ -31,7 +32,6 @@ body{
 }
 
 .one{
-  margin-top: 75px;
   background-color: hsl(263, 55%, 52%);
   background-image: url("images/bg-pattern-quotation.svg");
   background-position: 200px 0;
@@ -84,6 +84,7 @@ body{
   margin-right: 28px;
   font-size: 1.25rem;
   font-weight: 600;
+  letter-spacing: 1px;
 }
 
 .testimonial{
@@ -95,7 +96,8 @@ body{
 .attribution {
   position: relative;
   bottom: 0;
-  font-size: 11px; text-align: center;
+  font-size: 11px;
+  text-align: center;
 }
 
 .attribution a {
@@ -104,7 +106,6 @@ body{
 
 @media only screen and (min-width: 768px){
   .grid-container{
-    margin: auto;
     max-width: 700px;
     display: grid;
     grid-template-columns: auto auto auto auto;
@@ -130,43 +131,49 @@ body{
     grid-column: 1/5;
   }
 
-
   .five{
     grid-area: 2 / 3 / span 2/ 5
+  }
+
+  .testimonial{
+    line-height: 1.6;
+    margin-bottom: 35px;
+  }
+
+  .five > .testimonial{
+    margin-right: 55px;
   }
 }
 
 
 /* --------------FIX THIS!!---------------- */
-@media only screen and (min-width: 1024px){
+@media only screen and (min-width: 1100px){
   .grid-container{
-    max-width: none;
-    grid-template-columns: auto auto auto auto;
-    grid-template-rows: 500px 500px;
-    align-items: center;
+    margin-top: 100px;
+    max-width: 1200px;
+    grid-template-areas: 'one one one two five'
+                          'three four four four five';
   }
 
   .one{
-    width: 530px;
-    grid-column: 1 / 3;
+    background-position: 390px 0;
+    grid-area: one;
   }
 
   .two{
-    grid-column: 3 / 4;
+    grid-area: two;
   }
 
   .three{
-    grid-column: 1/ 2;
+    grid-area: three;
   }
 
   .four{
-    width: 530px;
-    grid-column: 2 / 4;
+    grid-area: four;
   }
 
   .five{
-
-    grid-area: 1 / 4 / span 2 / 5;
+    grid-area: five;
   }
 
 }
